<resources>
    <string name="app_name">Universal</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="can_we_start">Can We Start</string>
    <string name="i_am_here">I am Here</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="hey_wanna_get_in">Hey Wanna Get in</string>
    <string name="Fill_up_the_space">Fill up the space</string>
    <string name="login">Login</string>
    <string name="i_am_also_here">I am also Here</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="have_an_account">Have an Account</string>
    <string name="facebookbutton">facebookButton</string>
    <string name="googlebutton">googleButton</string>
    <string name="orme">orMe</string>
    <string name="create_account">Create Account</string>
    <string name="enter_the_otp_below">Enter the OTP Below</string>
    <string name="code">CODE</string>
    <string name="verify">Verify</string>
    <string name="your_otp_here">Your OTP Here</string>
    <string name="didn_t_receive_code">Didn\'t Receive code</string>
    <string name="resend">Resend</string>
    <string name="logout">Logout</string>
    <string name="clientId">358228217549-bp4g4kaf9s7s7nod3q8bpudaa4q55upc.apps.googleusercontent.com</string>
    <string name="vanakon_da_mapla_vetla_irunthu">Vanakon..da mapla Vetla irunthu</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="account_user">Account User</string>
    <string name="add_your_news_update">Add your News Update</string>
    <string name="my_flat">My Flat</string>
    <string name="search">Search</string>
    <string name="username">Username</string>
    <string name="fruits">Fruits</string>
    <string name="category">Category</string>
    <string name="products">Products</string>
    <string name="tomato">Fresh Tomato</string>
    <string name="_1kg">1kg</string>
    <string name="content_description_media">content_description_media</string>
    <string name="_28">₹28</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="order">Order</string>
    <string name="menu">Menu</string>
    <string name="user">User</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="address">Address</string>
    <string name="city_town">City/Town</string>
    <string name="state">State</string>
    <string name="pincode">Pincode</string>
    <string name="i_agree_the">I agree the <Span><a href="https://megworldtech.com/terms-and-condition/">Terms &amp; Conditions</a></Span> and <Span><a href="https://megworldtech.com/privacy-policy/">Privacy Policy</a></Span></string>
    <string name="back_button">Back Button</string>
    <string name="save">Save</string>
    <string name="full_name">Full Name</string>
    <string name="register">Register</string>
    <string name="or_sign_up_with">Or sign up with</string>
    <string name="not_register_yet">Not register yet ?</string>
    <string name="enter_your_email_address_we_will_send_your_email_to_reset_password">Enter your Email Address, we will send your email to reset password</string>
    <string name="submit">SUBMIT</string>
    <string name="Storage_permission_denied">Oops, you Just denied the permission for storage. you can also allow it from settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="hello_gmail_com">Hello@gmail.com</string>
    <string name="contact">Contact</string>
    <string name="no_220_samandham_nagar_kundrathur_chennai_tamil_nadu_600069">No 220 Samandham Nagar, kundrathur, Chennai, Tamil Nadu 600069</string>
    <string name="_9167893416">9167893416</string>
    <string name="legal_and_terms">Legal And Terms</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="about">About</string>
    <string name="title_profile_completed">Profile Completed</string>
    <string name="ruppes">₹</string>
    <string name="_45">45</string>
    <string name="_0">0</string>
    <string name="_4_7">4.7</string>
    <string name="_90_ratings">(90 Ratings)</string>
    <string name="product_description">Product Description</string>
    <string name="description_for_product">Fresh, and delicious tomatoes are a summertime favourite. Tomatoes are perfect for sauces and salsas, or try marinating them in herbs and olive oil for an easy appetizer. Enjoy a delicious cup of tomato soup on a lazy afternoon or simply use it as a pizza topping on an exciting evening watching your favourite sports. So, go ahead, buy Tomato online now.</string>
</resources>