<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.megWorld.universal.ui.fragement.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_Order"
        android:name="com.megWorld.universal.ui.fragement.OrderFragment"
        android:label="@string/order"
        tools:layout="@layout/fragment_order" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.megWorld.universal.ui.fragement.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>