<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragement.HomeFragment">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        tools:ignore="UselessParent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >



            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userPic"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="14dp"
                android:contentDescription="@string/username"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/userpic"
                />

            <TextView
                android:id="@+id/profileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="22dp"
                android:fontFamily="@font/sfdisplaysemibold"
                android:text="@string/username"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/userPic"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userAddressId"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.7"
                android:layout_marginEnd="15dp"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/ic_location">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/my_flat"
                    android:text="@string/my_flat"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    tools:ignore="TouchTargetSizeCheck" />


            </com.google.android.material.textfield.TextInputLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/searchBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                app:cardCornerRadius="28dp"
                app:cardElevation="10dp"
                app:layout_constraintTop_toBottomOf="@+id/userAddressId">

                <android.widget.SearchView
                    android:id="@+id/search"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/search_bg"
                    android:closeIcon="@drawable/ic_close"
                    android:iconifiedByDefault="false"
                    android:queryHint="@string/search"
                    android:searchIcon="@drawable/ic_search"
                    android:theme="@style/ThemeOverlay.Search" />

            </androidx.cardview.widget.CardView>


            <com.jama.carouselview.CarouselView
                android:id="@+id/carouselView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:carouselOffset="center"
                app:enableSnapping="true"
                app:indicatorAnimationType="drop"
                app:indicatorPadding="5"
                app:indicatorRadius="5"
                app:indicatorSelectedColor="@color/primary_color"
                app:indicatorUnselectedColor="@color/teal_700"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/searchBar"
                app:resource="@layout/image_carousel_item"
                app:scaleOnScroll="false"
                app:setAutoPlay="true"
                app:setAutoPlayDelay="3000"
                app:size="10"
                app:spacing="10" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/category"
                app:layout_constraintTop_toBottomOf="@id/carouselView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/category"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:fontFamily="@font/sfdisplayblack"
                android:textColor="@color/black"
                android:textSize="20sp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/catList"
                tools:itemCount="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/category"
                tools:listitem="@layout/main_category_menu"
                android:orientation="horizontal"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/gProduct"
                app:layout_constraintTop_toBottomOf="@id/catList"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/products"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:fontFamily="@font/sfdisplayblack"
                android:textColor="@color/black"
                android:textSize="20sp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/productList"
                tools:listitem="@layout/product_list"
                app:layout_constraintTop_toBottomOf="@+id/gProduct"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="10dp"
                android:nestedScrollingEnabled="false"
                android:background="@color/white"

                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</RelativeLayout>